# game-of-life

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.cache/clangd/index/: A.cpp.BE6EF2235F6EBBB5.idx  A.hpp.8316CBB00EF8CCDD.idx  B.cpp.C45C78889818ADC1.idx  GOL.cpp.25F33D78351EB55D.idx  main.cpp.763C1D29ED43A186.idx  main.cpp.D8215F075168A961.idx
GOL_UI/: CMakeLists.txt  grid.h  gridModel.cpp  gridModel.h  main.cpp
GOL_UI/qml/: ControlBoard.qml  Main.qml  Pilot.qml  resource.qrc
GOL_console/: CMakeLists.txt  GOL.hpp  main.cpp
GOL_console/test/: CMakeLists.txt  test.cpp
include/: GOL.hpp
src/: main.cpp
test/: CMakeLists.txt  test.cpp
